--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ header {
 
 h1 {
   color: RGB(9, 8, 8);
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
 }
 
 nav {
@@ -26,7 +26,7 @@ nav {
   width: 300px;
 }
 
-a {
+.navAnchor {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -36,7 +36,7 @@ a {
 
 /* unvisited link */
 a:link {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   text-decoration: none;
   color: RGB(146, 139, 97);
 }
@@ -52,65 +52,67 @@ a:hover {
 }
 
 .main {
-  height: 150px;
-  /* height: 100vh; */
-  /* background-color: RGB(231, 226, 191);
-  margin-bottom: 2%;
-  border-radius: 12px;
-  border: 2px solid RGB(146, 139, 97);
-  height: 100%; */
+  height: 45vh;
 }
 
 .output {
-  margin-top: 250px;
-    text-align:center;
-    font-family: 'Raleway', sans-serif;
-    color:RGB(9, 8, 8);
-    font-size: 1.5rem;
-  }
-  
-  /* Cursor Styling */
-  
-  .cursor::after {
-    content:'';
-    display:inline-block;
-    margin-left:3px;
-    background-color:RGB(146, 139, 97);
-    animation-name:blink;
-    animation-duration:0.75s;
-    animation-iteration-count: infinite;
-  }
-  h2.cursor::after {
-    height:48px;
-    width:26px;
-  }
-  h3.cursor::after {
-    height:26px;
-    width:12px;
-  }
-  
-  @keyframes blink {
-    0% {
-      opacity:1;
-    }
-    49% {
-      opacity:1;
-    }
-    50% {
-      opacity:0;
-    }
-    100% {
-      opacity:0;
-    }
-  }
+  margin-top: 150px;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+  color: RGB(9, 8, 8);
+  font-size: 40px;
+}
 
+/* Cursor Styling */
+
+.cursor::after {
+  content: "";
+  display: inline-block;
+  margin-left: 3px;
+  background-color: RGB(146, 139, 97);
+  animation-name: blink;
+  animation-duration: 0.75s;
+  animation-iteration-count: infinite;
+}
+h2.cursor::after {
+  height: 48px;
+  width: 26px;
+}
+h3.cursor::after {
+  height: 26px;
+  width: 12px;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 i {
   width: 25px;
   height: 25px;
+}
+
+.arrow-1 {
   position: absolute;
   top: 90%;
   left: 50%;
+}
+
+.arrow-2 {
+  display: flex;
+  align-items: center;
+  margin-top: 125px;
 }
 
 .arrow {
@@ -126,7 +128,109 @@ i {
 }
 
 .work {
-  border: 1px solid red;
-  height: 100vh;
-  margin-top: 50%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  margin-top: 25%;
+}
+
+.rvc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.img-placeholder-1 {
+  background-color: rgb(231, 226, 191);
+  height: 500px;
+  border-radius: 12px;
+  width: 50%;
+  margin-left: 50px;
+  margin-right: 25px;
+}
+
+.textbox-1 {
+  margin-left: 25px;
+  margin-right: 50px;
+  height: 100%;
+  width: 50%;
+}
+
+.openBank {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.img-placeholder-2 {
+  background-color: rgb(231, 226, 191);
+  height: 500px;
+  border-radius: 12px;
+  width: 50%;
+  margin-left: 25px;
+  margin-right: 50px;
+  margin-bottom: 50px;
+}
+
+.textbox-2 {
+  margin-left: 50px;
+  margin-right: 25px;
+  margin-bottom: 50px;
+  height: 100%;
+  width: 50%;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(231, 226, 191);
+  height: 100%;
+  width: 100%;
+  margin-top: 25vh;
+  margin-bottom: 50px;
+  border-radius: 12px;
+}
+
+.cover {
+  /* margin-top: 50px; */
+  /* margin-left: 50px;
+  margin-right: 50px; */
+  height: 350px;
+  object-fit: cover;
+  object-position: 140% 65%;
+  width: 100%;
+}
+
+.profile {
+  margin-top: -125px;
+  margin-left: 75px;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.bio {
+  margin-bottom: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+  padding-bottom: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  height: 650px;
+}
+
+ul {
+  text-align: left;
+}
+
+li {
+  text-align: left;
 }
